<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
        >

    <LinearLayout
            android:id="@+id/back"
            android:tag="back"
            style="@style/ListBackContent"
            >

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/action_open"
                style="@style/ListButtonAction"
                android:text="@string/notification_open"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/action_email"
                style="@style/ListButtonAction"
                android:text="@string/notification_email"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/action_share"
                style="@style/ListButtonAction"
                android:text="@string/notification_share"/>

    </LinearLayout>

    <RelativeLayout android:orientation="vertical"
        android:id="@+id/front"
        android:tag="front"
        style="@style/ListFrontContent">


        <LinearLayout
            android:id="@+id/thumbnail_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="3dp">

            <!--profile image -->
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/profile" />

        </LinearLayout>

        <!--username-->
        <TextView
            android:id="@+id/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/details"
            android:layout_alignRight="@+id/details"
            android:layout_alignTop="@+id/thumbnail_image"
            android:layout_toRightOf="@+id/thumbnail_image"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--call details-->
        <TextView
            android:id="@+id/details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_marginTop="1dip"
            android:layout_toRightOf="@+id/thumbnail_image"
            android:text="Mobile, 53 minutes ago"
            android:textColor="#343434"
            android:textSize="14sp" />
    </RelativeLayout>

</FrameLayout>